esqueci do link pra page obrigado index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header> 
         <div id="caixa">
             <h2>Bora na exposição?</h2>
-            <button id="sim">Sim</button>
+            <a href="obrigado.html"><button id="sim">Sim</button></a>
             <button id="nao">Não</button>
         </div>
         <div id="limite"></div>
