add style botao index.html

--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>E ai? Bora?</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header> 
         <div id="caixa">
             <h2>Bora na exposição?</h2>
-            <a href="obrigado.html"><button id="sim">Sim</button></a>
-            <button id="nao">Não</button>
+            <a href="obrigado.html"><button class="botao-amarelo-van-gogh" id="sim">Sim</button></a>
+            <button class="botao-amarelo-van-gogh" id="nao">Não</button>
         </div>
         <div id="limite"></div>
     </header>
