--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header> 
         <div id="caixa">
-            <h2>Bora na exposição?</h2>
+            <h2>Você quer ir na exposição do Van Gogh comigo Miih?</h2>
             <a href="obrigado.html"><button class="botao-amarelo-van-gogh" id="sim">Sim</button></a>
             <button class="botao-amarelo-van-gogh" id="nao">Não</button>
         </div>
