--- a/obrigado.html
+++ b/obrigado.html
@@ -9,8 +9,9 @@
 <body>
     <div id="caixa">
         <h2>Muito Obrigado!!!</h2>
-        <p>Isso foi um pedido em forma de brincadeira e ele não sabe sua respostakkkkk então manda mensagem pro Kikito por favor.</p>
-        <p><b>espero que tenha gostado e tenho certeza que ele ficou feliz com a resposta</b>, qualquer problema contate o Kikito</p>
+        <p>Eu queria agradecer desde já, sei que só dava pra responder sim kkkkk, ficaria muito feliz de compartilhar esse momento contigo ainda mais por ser algo que nós dois se interessamos, mas quero deixar claro que independente do que der sou muito grato e já estou muito feliz
+
+<b>Claro que só com vc marcando "sim" não quer dizer que tenha algo marcado oficialmente, ainda mais que temos que constatar os pais sobre isso, e podemos conversar melhor sobre isso no insta kkkk, mas de verdade muito obrigado!<b\><p\>
     </div>
 </body>
 </html>
